# CMAKE

Source/: CMakeLists.txt  main.cpp
Source/include/: dog.h
Source/src/: dog.cpp
